--- a/src/app/modules/products/list-categories/list-categories.component.html
+++ b/src/app/modules/products/list-categories/list-categories.component.html
@@ -43,7 +43,7 @@
                                 <button class="btn dlt-btn me-3" (click)="DeleteCategory(category._id)">
                                     <fa-icon [icon]="trashIcon"></fa-icon>
                                 </button>
-                                <button class="btn edt-btn">
+                                <button class="btn edt-btn" (click)="NavigateToEditCategory(category._id)">
                                     <fa-icon [icon]="penIcon"></fa-icon>
                                 </button>
                             </td>
