--- a/src/app/modules/products/list-products/list-products.component.html
+++ b/src/app/modules/products/list-products/list-products.component.html
@@ -76,7 +76,7 @@
                             <span class="fs-6 fw-bold prd-price">{{product.price}} EGP</span>
                         </div>
     
-                        <span class="fw-light">Qty: {{product.quantity}} Piece</span>
+                        <span class="fw-light prd-qty">Qty: {{product.quantity}} Piece</span>
                         <ul class="list-unstyled d-flex mt-2">
                             <li class="me-1" *ngFor="let color of product.colors">
                                 <span [style.background]="color" class="avail-colors"></span>
