--- a/src/app/modules/products/list-categories/list-categories.component.css
+++ b/src/app/modules/products/list-categories/list-categories.component.css
@@ -1,11 +1,11 @@
 .ctgry-name{
     text-transform: capitalize;
-    font-weight: 500;
+    font-weight: 300;
     text-align: center;
     vertical-align: middle;
-    font-size: 24px;
-    font-family: 'Dancing Script';
-    text-shadow: 1px 1px 3px #67624e73;
+    font-size: 20px;
+    font-family: var(--stringfont);
+    /* text-shadow: 1px 1px 3px #67624e73; */
 }
 
 table{
@@ -13,7 +13,7 @@ table{
 }
 
 thead th{
-    font-family: Agbalumo;
+    font-family:  var(--stringfont);
     text-align: center;
     font-size:18px;
 }
