--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg  align-items-center">
+<nav class="navbar navbar-expand-lg justify-content-between  align-items-center">
     <div class="logo">
         <span class="navbar-brand" href="#">
             <img id="logo" src="../../../assets/logo.png">
