--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
+
 @import url('/src/app/modules/products/list-products-categories/list-products-categories.component.css');
 
 html,
@@ -12,13 +17,19 @@ body {
 :root {
     --mode: black;
     --fontcolor: white;
-    --maincolor: rgb(1, 34, 44)
+    --maincolor: rgb(70 95 93);
+    --mainfontcolor:rgb(3 77 76 / 87%);
+    --mainfont:'Edu TAS Beginner', cursive;
+    --stringfont: Lobster;
+    --numberfont: Dancing Script
 }
 
 main {
-    background-color: rgb(227, 225, 225);
+    background-color: rgb(131 121 110 / 11%);
     width: 100%;
-
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
 }
 
 img {
@@ -28,9 +39,9 @@ img {
 
 .btn {
     border-radius: 50px;
-    background: #2196F3;
+    background: #2196F3 !important;
     font-size: 18px;
-    color: white;
+    color: white !important;
     opacity: 0.3;
 }
 
@@ -39,17 +50,18 @@ img {
 }
 
 .dlt-btn {
-    background-color: tomato;
+    background-color: tomato !important;
 }
 
 .edt-btn {
-    background-color: rgb(0, 199, 123);
+    background-color: rgb(0, 199, 123) !important;
 }
 
 .add-btn {
-    background-color: blue;
+    background-color:rgb(57 87 84 / 57%) !important;
     border-radius: 0
 }
+
 
 /*  */
 .colorItem {
@@ -60,7 +72,7 @@ img {
 }
 
 .deletebtnclr {
-    background: #ffffff3f;
+    background: #0c0c0c3f;
     position: absolute;
     inset: 0px;
     font-size: 24px;
@@ -94,7 +106,7 @@ img {
 }
 
 .submit-btn {
-    background-color: rgba(0, 0, 0, 0.324);
+    background-color: rgb(57 87 84 / 57%);
     color: #000000b3;
     font-weight: 500;
     border-radius: 50px;
@@ -123,11 +135,11 @@ img {
 
 
 div::-webkit-scrollbar , div::-webkit-scrollbar-button{
-    background-color: rgba(191, 208, 221, 0.846);
+    background-color: rgb(132 153 143 / 56%);
     /* border-radius: 0 20px 20px 0; */
 
 }
 div::-webkit-scrollbar-thumb{
-    background-color: rgb(127, 140, 145);
+    background-color: rgb(70 95 93 / 67%);
     border-radius: 100px;
 }
