--- a/src/app/modules/products/list-products-categories/list-products-categories.component.html
+++ b/src/app/modules/products/list-products-categories/list-products-categories.component.html
@@ -1,17 +1,21 @@
 <div class="container py-5">
-    <div class="d-flex">
+  <div class="d-flex position-relative">
 
-        <div class="category-list me-5  rounded-3 overflow-hidden">
-            
-            <app-list-categories [allCategories]="allCategories" [getImageUrl]="getImageUrl"></app-list-categories>
+    <div class="category-list me-5  rounded-3 overflow-hidden">
 
-        </div>
-
-        <div class="product-list rounded-3 overflow-hidden">
-
-           <app-list-products [allPrds]="allPrds" [getImageUrl]="getImageUrl"></app-list-products>
-
-        </div>
+      <app-list-categories [allCategories]="allCategories" [getImageUrl]="getImageUrl"></app-list-categories>
 
     </div>
+
+    <div class="product-list rounded-3 overflow-hidden">
+
+      <app-list-products [allPrds]="allPrds" [getImageUrl]="getImageUrl"
+        (newItemEvent)="showProductBox($event)"></app-list-products>
+
+    </div>
+
+    <app-modal-box [product]="prdInf" *ngIf="prdInf"></app-modal-box>
+
+
+  </div>
 </div>
