--- a/src/app/modules/products/list-products-categories/list-products-categories.component.css
+++ b/src/app/modules/products/list-products-categories/list-products-categories.component.css
@@ -20,6 +20,7 @@
     bottom: 0;
     text-transform: capitalize;
     user-select: none;
+    -webkit-user-select:none;
     right: 0;
     left: 0;
     color: gray;
@@ -33,3 +34,4 @@
 .product-list {
     width: 60%
 }
+
